--- a/plugins/cordova-plugin-dialogs/package.json
+++ b/plugins/cordova-plugin-dialogs/package.json
@@ -2,7 +2,7 @@
   "_from": "cordova-plugin-dialogs",
   "_id": "cordova-plugin-dialogs@2.0.2",
   "_inBundle": false,
-  "_integrity": "sha512-FUHI6eEVeoz2VkxbF0P56QlUQLGzXcvw3i4xuXyM9gEct6Y+FA3Xzgl2pJTZcTg5wRqLWzN08kgNoHPkom15pw==",
+  "_integrity": "?",
   "_location": "/cordova-plugin-dialogs",
   "_phantomChildren": {},
   "_requested": {
@@ -20,7 +20,7 @@
     "/"
   ],
   "_resolved": "https://registry.npmjs.org/cordova-plugin-dialogs/-/cordova-plugin-dialogs-2.0.2.tgz",
-  "_shasum": "ac3ce8b73bc885ff847078d5b533e7a4ed418a2f",
+  "_shasum": "?",
   "_spec": "cordova-plugin-dialogs",
   "_where": "/Users/ilsoolee/Desktop/faveu-2nd/faveu-cordova/ios/faveu",
   "author": {
